[package]
name = "l3d"
version = "0.1.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = "1.0"
gltf = { version = "0.15", features = ["extras", "names", "utils"] }
rtbvh = { git = "https://github.com/MeirBon/rtbvh.git" }
glam = "0.11"
rayon = "1.5"
image = "0.23"