[package]
name = "l3d"
version = "0.3.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"
description = "Library for loading 3D objects."
repository = "https://github.com/meirbon/l3d"
license = "MIT"
readme = "./README.md"
keywords = ["3d", "object", "gltf", "tinyobj", "obj"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = "3.0"
gltf = { version = "0.16", features = ["extras", "names", "utils", "import"] }
rtbvh = ">=0.6"
glam = ">=0.14"
rayon = "1.5"
image = "0.23"
serde = { version = "1.0", features = ["derive"], optional = true }


[features]
default = []
